# ShakePy

./: .gitignore  LICENSE  README  README.md  example_get_authentication.py  example_send_cad.py  example_trigger_shackingsats.py  pyproject.toml  setup.cfg  setup_envo.bat  setup_envo.sh
docs/: conf.py  index.rst
docs/src/: modules.rst  shakepi.auth.rst  shakepi.rst
scripts/: setup_envo.bat
shakepay_api/: __init__.py  wallet.py
src/shakepi/: account.py  auth.py  rate_limiter.py  rates.py
src/shakepy/: __init__.py  authentication.py  shaking_sats.py  test.py  transactions.py  waitlist.py
tests/: test_basic_auth.py
