[metadata]
name = ShakePi
version = 1.0a1
author = Quizque (Nick C.)
description = Shakepay python API
long_description = file: README
long_description_content_type = text/markdown
url = https://github.com/quizque/shakepay-python-interface
project_urls =
    Bug Tracker = https://github.com/quizque/shakepay-python-interface/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = shakepi
packages = find:
python_requires = >=3.6

[options.packages.find]
where = shakepi